fabric bring your own s3 bucket as shortcut to lakehouse

--- a/packages/fabric-backend/lib/src/main/resources/application.yml
+++ b/packages/fabric-backend/lib/src/main/resources/application.yml
@@ -47,6 +47,9 @@ fabricWorkspaces:
   startup.workspaceprovisioning:  ${FABRIC_WORKSPACE_PROVISION_ONSTARTUP:false}
   dnaGroupPrefix: ${FABRIC_ONBOARD_GROUP_PREFIX:XXXX}
   subgroupPrefix: ${FABRIC_SUB_GROUP_PREFIX:XXXX}
+  gateway.encryption.publicKey.modulus: ${FABRIC_ENCRYPTION_PUBLICKEY_MODULUS:xxx}
+  gateway.id: ${FABRIC_GATEWAY_ID:xxx}
+  gateway.encryption.publicKey.exponent: ${FABRIC_ENCRYPTION_PUBLICKEY_EXPONENT:xxx}
   group:
     identifier:  ${FABRIC_ONBOARD_GROUP_IDENTIFIER:xxxxx}
     displayName:  ${FABRIC_ONBOARD_GROUP_DISPLAYNAME:xxxxx}
@@ -60,6 +63,10 @@ fabricWorkspaces:
     workspacesBase: ${FABRIC_WORKSPACE_URL:https://api.fabric.microsoft.com/v1/workspaces}
     capacitiesBase: ${FABRIC_CAPACITY_URL:https://api.fabric.microsoft.com/v1/capacities}
     addUserUrl: ${FABRIC_ADDUSER_URL:https://api.powerbi.com/v1.0/myorg/groups/{groupId}/users}
+    lakehouseUrl: ${FABRIC_LAKEHOUSE_URL:https://api.fabric.microsoft.com/v1/workspaces/id/lakehouses}
+    datasourceUrl: ${FABRIC_CREATEDATASOURCE_URL:https://api.powerbi.com/v1.0/myorg/gateways/id/datasources}
+    datasourceUserUrl: ${FABRIC_DATASOURCE_ADDUSER_URL:https://api.powerbi.com/v1.0/myorg/gateways/id/datasources/connectionid/users}
+    shortcutUrl: ${FABRIC_SHORTCUT_URL:https://api.fabric.microsoft.com/v1/workspaces/id/items/lakehouseid/shortcuts}
     
 
 authoriser:
