--- a/deployment/kubernetes/helm/charts/minio/tenant/templates/tenant-configuration.yaml
+++ b/deployment/kubernetes/helm/charts/minio/tenant/templates/tenant-configuration.yaml
@@ -1,11 +1,20 @@
-{{- if not .Values.secrets.existingSecret }}
+{{- if (.Values.secrets) }}
+{{- fail "# ERROR: '.secrets' is deprecated since v5.0.15 and has been removed. Please use '.tenant.configSecret' instead." }}
+{{- else }}
+{{- if not (.Values.tenant.configSecret) }}
+{{- fail "# ERROR: '.tenant.configSecret' should be set." }}
+{{- else }}
+
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ dig "secrets" "name" "" (.Values | merge (dict)) }}
+  name: {{ dig "tenant" "configSecret" "name" "" (.Values | merge (dict)) }}
 type: Opaque
 stringData:
   config.env: |-
-    export MINIO_ROOT_USER={{ .Values.secrets.accessKey | quote }}
-    export MINIO_ROOT_PASSWORD={{ .Values.secrets.secretKey | quote }}
+    export MINIO_ROOT_USER={{ .Values.tenant.configSecret.accessKey | quote }}
+    export MINIO_ROOT_PASSWORD={{ .Values.tenant.configSecret.secretKey | quote }}
+
 {{- end }}
+{{- end }}
+
