--- a/deployment/kubernetes/helm/charts/minio/operator/templates/console-ingress.yaml
+++ b/deployment/kubernetes/helm/charts/minio/operator/templates/console-ingress.yaml
@@ -1,8 +1,15 @@
 {{- if .Values.console.ingress.enabled }}
+{{- if .Capabilities.APIVersions.Has "networking.k8s.io/v1/Ingress" -}}
 apiVersion: networking.k8s.io/v1
+{{- else if .Capabilities.APIVersions.Has "networking.k8s.io/v1beta1/Ingress" -}}
+apiVersion: networking.k8s.io/v1beta1
+{{- else -}}
+apiVersion: extensions/v1beta1
+{{- end }}
 kind: Ingress
 metadata:
   name: {{ include "minio-operator.console-fullname" . }}
+  namespace: {{ .Release.Namespace }}
   {{- with .Values.console.ingress.labels }}
   labels: {{ toYaml . | nindent 4 }}
   {{- end }}
@@ -10,16 +17,13 @@ metadata:
   annotations: {{ toYaml . | nindent 4 }}
   {{- end }}
 spec:
-  {{- with .Values.console.ingress.ingressClassName }}
-  ingressClassName: {{ . }}
-  {{- end }}
   {{- if .Values.console.ingress.tls }}
   tls:
     {{- range .Values.console.ingress.tls }}
     - hosts:
         {{- range .hosts }}
         - {{ . | quote }}
-        {{- end }}
+      {{- end }}
       secretName: {{ .secretName }}
     {{- end }}
   {{- end }}
@@ -28,10 +32,16 @@ spec:
       http:
         paths:
           - path: {{ .Values.console.ingress.path }}
-            pathType: {{ .Values.console.ingress.pathType }}
+            {{- if $.Capabilities.APIVersions.Has "networking.k8s.io/v1/Ingress" }}
+            pathType: Prefix
             backend:
               service:
                 name: "console"
                 port:
                   name: http
-{{- end }}
+            {{- else }}
+            backend:
+              serviceName: "console"
+              servicePort: http
+            {{ end }}
+{{ end }}
