--- a/deployment/kubernetes/helm/charts/minio/operator/templates/console-service.yaml
+++ b/deployment/kubernetes/helm/charts/minio/operator/templates/console-service.yaml
@@ -2,11 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: "console"
-  labels: {{- include "minio-operator.labels" . | nindent 4 }}
+  namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "minio-operator.labels" . | nindent 4 }}
 spec:
   ports:
   - name: http
     port: 9090
   - name: https
     port: 9443
-  selector: {{- include "minio-operator.console-selectorLabels" . | nindent 4 }}
+  selector:
+    {{- include "minio-operator.console-selectorLabels" . | nindent 4 }}
