--- a/deployment/kubernetes/helm/charts/minio/operator/templates/console-ui.yaml
+++ b/deployment/kubernetes/helm/charts/minio/operator/templates/console-ui.yaml
@@ -2,14 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: console-sa
----
-apiVersion: v1
-kind: Secret
-metadata:
-  name: console-sa-secret
-  annotations:
-    kubernetes.io/service-account.name: console-sa
-type: kubernetes.io/service-account-token
+  namespace: {{ .Release.Namespace }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -27,7 +20,6 @@ rules:
       - list
       - patch
       - update
-      - delete
       - deletecollection
   - apiGroups:
       - ""
@@ -110,8 +102,6 @@ rules:
       - update
       - create
       - get
-      - delete
-      - list
   - apiGroups:
       - minio.min.io
     resources:
@@ -269,3 +259,4 @@ data:
 kind: ConfigMap
 metadata:
   name: console-env
+  namespace: {{ .Release.Namespace }}
