--- a/deployment/kubernetes/helm/charts/minio/operator/templates/operator-service.yaml
+++ b/deployment/kubernetes/helm/charts/minio/operator/templates/operator-service.yaml
@@ -2,24 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: "operator"
-  labels: {{- include "minio-operator.labels" . | nindent 4 }}
+  namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "minio-operator.labels" . | nindent 4 }}
 spec:
   type: ClusterIP
   ports:
-    - port: 4221
-      name: http
+    - port: 4222
+      name: https
   selector:
     operator: leader
     {{- include "minio-operator.selectorLabels" . | nindent 4 }}
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: "sts"
-  labels: {{- include "minio-operator.labels" . | nindent 4 }}
-spec:
-  type: ClusterIP
-  ports:
-    - port: 4223
-      name: https
-  selector: {{- include "minio-operator.selectorLabels" . | nindent 4 }}
