--- a/deployment/kubernetes/helm/charts/minio/operator/templates/serviceaccount.yaml
+++ b/deployment/kubernetes/helm/charts/minio/operator/templates/serviceaccount.yaml
@@ -2,4 +2,6 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: minio-operator
-  labels: {{- include "minio-operator.labels" . | nindent 4 }}
+  namespace: {{ .Release.Namespace }}
+  labels:
+{{ include "minio-operator.labels" . | nindent 4 }}
