--- a/deployment/kubernetes/helm/charts/minio/operator/templates/sts-service.yaml
+++ b/deployment/kubernetes/helm/charts/minio/operator/templates/sts-service.yaml
@@ -1,14 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: operator
+  name: sts
   namespace: {{ .Release.Namespace }}
   labels: {{- include "minio-operator.labels" . | nindent 4 }}
 spec:
   type: ClusterIP
   ports:
-    - port: 4221
-      name: http
-  selector:
-    operator: leader
-    {{- include "minio-operator.selectorLabels" . | nindent 4 }}
+    - port: 4223
+      name: https
+  selector: {{- include "minio-operator.selectorLabels" . | nindent 4 }}
