--- a/deployment/kubernetes/helm/charts/minio/operator/Chart.yaml
+++ b/deployment/kubernetes/helm/charts/minio/operator/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-appVersion: v4.3.7
+appVersion: v6.0.3
 description: A Helm chart for MinIO Operator
 home: https://min.io
 icon: https://min.io/resources/img/logo/MINIO_wordmark.png
@@ -10,8 +10,8 @@ keywords:
 maintainers:
 - email: dev@minio.io
   name: MinIO, Inc
-name: minio-operator
+name: operator
 sources:
 - https://github.com/minio/operator
 type: application
-version: 4.3.7
+version: 6.0.3
