--- a/deployment/kubernetes/helm/charts/minio/operator/templates/operator-clusterrolebinding.yaml
+++ b/deployment/kubernetes/helm/charts/minio/operator/templates/operator-clusterrolebinding.yaml
@@ -2,6 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: minio-operator-binding
+  labels: {{- include "minio-operator.labels" . | nindent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
