--- a/deployment/kubernetes/helm/charts/minio/operator/templates/operator-deployment.yaml
+++ b/deployment/kubernetes/helm/charts/minio/operator/templates/operator-deployment.yaml
@@ -1,79 +1,67 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: "minio-operator"
+  name: minio-operator
   namespace: {{ .Release.Namespace }}
-  labels:
-    {{- include "minio-operator.labels" . | nindent 4 }}
+  labels: {{- include "minio-operator.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.operator.replicaCount }}
   selector:
-    matchLabels:
-      {{- include "minio-operator.selectorLabels" . | nindent 6 }}
+    matchLabels: {{- include "minio-operator.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
+        {{- include "minio-operator.labels" . | nindent 8 }}
         {{- include "minio-operator.selectorLabels" . | nindent 8 }}
     spec:
-    {{- with .Values.operator.imagePullSecrets }}
-      imagePullSecrets:
-        {{- toYaml . | nindent 8 }}
-    {{- end }}
+      {{- with .Values.operator.imagePullSecrets }}
+      imagePullSecrets: {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.operator.runtimeClassName }}
+      runtimeClassName: {{ . }}
+      {{- end }}
       serviceAccountName: minio-operator
-    {{- with .Values.operator.securityContext }}
-      securityContext:
-        {{- toYaml . | nindent 8 }}
-    {{- end }}
-    {{- with .Values.operator.nodeSelector }}
-      nodeSelector:
-        {{- toYaml . | nindent 8 }}
-    {{- end }}
-    {{- with .Values.operator.affinity }}
-      affinity:
-        {{- toYaml . | nindent 8 }}
-    {{- end }}
-    {{- with .Values.operator.tolerations }}
-      tolerations:
-        {{- toYaml . | nindent 8 }}
-    {{- end }}
-    {{- with .Values.operator.topologySpreadConstraints }}
-      topologySpreadConstraints:
-        {{- toYaml . | nindent 8 }}
-    {{- end }}
+      {{- with .Values.operator.securityContext }}
+      securityContext: {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.operator.nodeSelector }}
+      nodeSelector: {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.operator.affinity }}
+      affinity: {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.operator.tolerations }}
+      tolerations: {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.operator.topologySpreadConstraints }}
+      topologySpreadConstraints: {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.operator.priorityClassName }}
+      priorityClassName: {{ . }}
+      {{- end }}
+      {{- with .Values.operator.initContainers }}
+      initContainers: {{- toYaml . | nindent 8 }}
+      {{- end }}
       containers:
         - name: {{ .Chart.Name }}
-          image: "{{ .Values.operator.image.repository }}:{{ .Values.operator.image.tag }}"
+          image: "{{ .Values.operator.image.repository }}:{{ .Values.operator.image.digest | default .Values.operator.image.tag }}"
           imagePullPolicy: {{ .Values.operator.image.pullPolicy }}
-          {{- if or .Values.operator.clusterDomain .Values.operator.nsToWatch }}
-          env:
-            {{- if .Values.operator.clusterDomain }}
-            - name: CLUSTER_DOMAIN
-              value: {{ .Values.operator.clusterDomain }}
-            {{- end }}
-            {{- if .Values.operator.nsToWatch }}
-            - name: WATCHED_NAMESPACE
-              value: {{ .Values.operator.nsToWatch }}
-            {{- end }}
-          {{ else }}
+          args:
+            - controller
           {{- with .Values.operator.env }}
-          env:
-            {{ toYaml . | nindent 10 }}
+          env: {{- toYaml . | nindent 12 }}
           {{- end }}
+          {{- if .Values.operator.sidecarImage }}
+            - name: "OPERATOR_SIDECAR_IMAGE"
+              value: "{{ .Values.operator.sidecarImage.repository }}:{{ .Values.operator.sidecarImage.digest | default .Values.operator.sidecarImage.tag }}"
           {{- end }}
-          resources:
-            {{- toYaml .Values.operator.resources | nindent 12 }}
-    {{- with .Values.operator.initContainers }}
-      initContainers:
-        {{- toYaml . | nindent 8 }}
-    {{- end}}
-      affinity:
-        podAntiAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            - labelSelector:
-                matchExpressions:
-                  - key: name
-                    operator: In
-                    values:
-                      - minio-operator
-              topologyKey: kubernetes.io/hostname
-
+          resources: {{- toYaml .Values.operator.resources | nindent 12 }}
+          {{- with .Values.operator.containerSecurityContext }}
+          securityContext: {{- toYaml . | nindent 12 }}
+          {{- end }}
+          {{- with .Values.operator.volumeMounts }}
+          volumeMounts: {{- toYaml . | nindent 12 }}
+          {{- end }}
+      {{- with .Values.operator.volumes }}
+      volumes: {{- toYaml . | nindent 8 }}
+      {{- end }}
