--- a/deployment/kubernetes/helm/charts/minio/operator/values.yaml
+++ b/deployment/kubernetes/helm/charts/minio/operator/values.yaml
@@ -1,155 +1,191 @@
-# Default values for minio-operator.
-
+###
+# Root key for Operator Helm Chart
 operator:
-  ## DEPRECATED: Please use the "CLUSTER_DOMAIN" or "WATCHED_NAMESPACE" env variable
-  ## instead of clusterDomain and nsToWatch.
-  # clusterDomain: "cluster.local"
-  # nsToWatch: ""
-  ## Setup environment variables for the Operator
-  # env:
-  #   - name: MINIO_OPERATOR_TLS_ENABLE
-  #     value: "off"
-  #   - name: CLUSTER_DOMAIN
-  #     value: "cluster.domain"
-  #   - name: WATCHED_NAMESPACE
-  #     value: ""
+  ###
+  # An array of environment variables to pass to the Operator deployment.
+  # Pass an empty array to start Operator with defaults.
+  #
+  # For example:
+  #
+  # .. code-block:: yaml
+  #
+  #    env:
+  #    - name: MINIO_OPERATOR_DEPLOYMENT_NAME
+  #      valueFrom:
+  #        fieldRef:
+  #          fieldPath: metadata.labels['app.kubernetes.io/name']
+  #    - name: CLUSTER_DOMAIN
+  #      value: "cluster.domain"
+  #    - name: WATCHED_NAMESPACE
+  #      value: ""
+  #    - name: MINIO_OPERATOR_RUNTIME
+  #      value: "OpenShift"
+  #
+  # See `Operator environment variables <https://github.com/minio/operator/blob/master/docs/env-variables.md>`__ for a list of all supported values.
+  env:
+    - name: OPERATOR_STS_ENABLED
+      value: "on"
+  # An array of additional annotations to be applied to the operator service account
+  serviceAccountAnnotations: []
+  # additional labels to be applied to operator resources
+  additionalLabels: {}
+  ###
+  # Specify the Operator container image to use for the deployment.
+  # ``image.tag``
+  # For example, the following sets the image to the ``quay.io/minio/operator`` repo and the v6.0.3 tag.
+  # The container pulls the image if not already present:
+  #
+  # .. code-block:: yaml
+  #
+  #    image:
+  #      repository: quay.io/minio/operator
+  #      tag: v6.0.3
+  #      pullPolicy: IfNotPresent
+  #
+  # The chart also supports specifying an image based on digest value:
+  #
+  # .. code-block:: yaml
+  #
+  #    image:
+  #      repository: quay.io/minio/operator@sha256
+  #      digest: 28c80b379c75242c6fe793dfbf212f43c602140a0de5ebe3d9c2a3a7b9f9f983
+  #      pullPolicy: IfNotPresent
+  #
   image:
-    repository: minio/operator
-    tag: v4.3.7
+    repository: quay.io/minio/operator
+    tag: v6.0.3
     pullPolicy: IfNotPresent
+  ###
+  # Specify the sidecar container image to deploy on tenant pods for init container and sidecar.
+  # Only need to change this if want to use a different version that the default, or want to set a custom registry.
+  # ``sidecarImage.tag``
+  # For example, the following sets the image to the ``quay.io/minio/operator-sidecar`` repo and the v6.0.3 tag.
+  # The container pulls the image if not already present:
+  #
+  # .. code-block:: yaml
+  #
+  #    sidecarImage:
+  #      repository: quay.io/minio/operator-sidecar
+  #      tag: v6.0.3
+  #      pullPolicy: IfNotPresent
+  #
+  # The chart also supports specifying an image based on digest value:
+  #
+  # .. code-block:: yaml
+  #
+  #    sidecarImage:
+  #      repository: quay.io/minio/operator-sidecar@sha256
+  #      digest: a11947a230b80fb1b0bffa97173147a505d4f1207958f722e348d11ab9e972c1
+  #      pullPolicy: IfNotPresent
+  #
+  sidecarImage: {}
+  ###
+  #
+  # An array of Kubernetes secrets to use for pulling images from a private ``image.repository``.
+  # Only one array element is supported at this time.
   imagePullSecrets: [ ]
-  initcontainers: [ ]
-  replicaCount: 1
+  ###
+  #
+  # The name of a custom `Container Runtime <https://kubernetes.io/docs/concepts/containers/runtime-class/>`__ to use for the Operator pods.
+  runtimeClassName: ~
+  ###
+  # An array of `initContainers <https://kubernetes.io/docs/concepts/workloads/pods/init-containers/>`__ to start up before the Operator pods.
+  # Exercise care as ``initContainer`` failures prevent Operator pods from starting.
+  # Pass an empty array to start the Operator normally.
+  initContainers: [ ]
+  ###
+  # The number of Operator pods to deploy.
+  # Higher values increase availability in the event of worker node failures.
+  #
+  # The cluster must have sufficient number of available worker nodes to fulfill the request.
+  # Operator pods deploy with pod anti-affinity by default, preventing Kubernetes from scheduling multiple pods onto a single Worker node.
+  replicaCount: 2
+  ###
+  # The Kubernetes `SecurityContext <https://kubernetes.io/docs/tasks/configure-pod-container/security-context/>`__ to use for deploying Operator resources.
+  #
+  # You may need to modify these values to meet your cluster's security and access settings.
   securityContext:
     runAsUser: 1000
     runAsGroup: 1000
     runAsNonRoot: true
     fsGroup: 1000
+  ###
+  # The Kubernetes `SecurityContext <https://kubernetes.io/docs/tasks/configure-pod-container/security-context/>`__ to use for deploying Operator containers.
+  # You may need to modify these values to meet your cluster's security and access settings.
+  containerSecurityContext:
+    runAsUser: 1000
+    runAsGroup: 1000
+    runAsNonRoot: true
+    allowPrivilegeEscalation: false
+    capabilities:
+      drop:
+        - ALL
+    seccompProfile:
+      type: RuntimeDefault
+  ###
+  # An array of `Volumes <https://kubernetes.io/docs/concepts/storage/volumes/>`__ which the Operator can mount to pods.
+  #
+  # The volumes must exist *and* be accessible to the Operator pods.
+  volumes: [ ]
+  ###
+  # An array of volume mount points associated to each Operator container.
+  #
+  # Specify each item in the array as follows:
+  #
+  # .. code-block:: yaml
+  #
+  #    volumeMounts:
+  #    - name: volumename
+  #      mountPath: /path/to/mount
+  #
+  # The ``name`` field must correspond to an entry in the ``volumes`` array.
+  volumeMounts: [ ]
+  ###
+  # Any `Node Selectors <https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/>`__ to apply to Operator pods.
+  #
+  # The Kubernetes scheduler uses these selectors to determine which worker nodes onto which it can deploy Operator pods.
+  #
+  # If no worker nodes match the specified selectors, the Operator deployment will fail.
   nodeSelector: { }
-  affinity: { }
+  ###
+  #
+  # The `Pod Priority <https://kubernetes.io/docs/concepts/scheduling-eviction/pod-priority-preemption/>`__ to assign to Operator pods.
+  priorityClassName: ""
+  ###
+  #
+  # The `affinity <https://kubernetes.io/docs/tasks/configure-pod-container/assign-pods-nodes-using-node-affinity/>`__ or anti-affinity settings to apply to Operator pods.
+  #
+  # These settings determine the distribution of pods across worker nodes and can help prevent or allow colocating pods onto the same worker nodes.
+  affinity:
+    podAntiAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        - labelSelector:
+            matchExpressions:
+              - key: name
+                operator: In
+                values:
+                  - minio-operator
+          topologyKey: kubernetes.io/hostname
+  ###
+  #
+  # An array of `Toleration labels <https://kubernetes.io/docs/concepts/scheduling-eviction/taint-and-toleration/>`__ to associate to Operator pods.
+  #
+  # These settings determine the distribution of pods across worker nodes.
   tolerations: [ ]
+  ###
+  #
+  # An array of `Topology Spread Constraints <https://kubernetes.io/docs/concepts/scheduling-eviction/topology-spread-constraints/>`__ to associate to Operator pods.
+  #
+  # These settings determine the distribution of pods across worker nodes.
   topologySpreadConstraints: [ ]
+  ###
+  #
+  # The `Requests or Limits <https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/>`__ for resources to associate to Operator pods.
+  #
+  # These settings can control the minimum and maximum resources requested for each pod.
+  # If no worker nodes can meet the specified requests, the Operator may fail to deploy.
   resources:
     requests:
       cpu: 200m
       memory: 256Mi
       ephemeral-storage: 500Mi
-
-console:
-  image:
-    repository: minio/console
-    tag: v0.12.3
-    pullPolicy: IfNotPresent
-  imagePullSecrets: [ ]
-  initcontainers: [ ]
-  replicaCount: 1
-  nodeSelector: { }
-  affinity: { }
-  tolerations: [ ]
-  topologySpreadConstraints: [ ]
-  resources: { }
-  securityContext:
-    runAsUser: 1000
-    runAsNonRoot: true
-  ingress:
-    enabled: false
-    labels: { }
-    annotations: { }
-    tls: [ ]
-    host: console.local
-    path: /
-
-## MinIO Tenant Definition
-tenants:
-  # Tenant name
-  - name: minio1
-    ## Registry location and Tag to download MinIO Server image
-    image:
-      repository: minio/minio
-      tag: RELEASE.2021-10-06T23-36-31Z
-      pullPolicy: IfNotPresent
-    ## Customize namespace for tenant deployment
-    namespace: default
-    ## Customize any private registry image pull secret.
-    ## currently only one secret registry is supported
-    imagePullSecret: { }
-    ## If a scheduler is specified here, Tenant pods will be dispatched by specified scheduler.
-    ## If not specified, the Tenant pods will be dispatched by default scheduler.
-    scheduler: { }
-    ## Specification for MinIO Pool(s) in this Tenant.
-    pools:
-      ## Servers specifies the number of MinIO Tenant Pods / Servers in this pool.
-      ## For standalone mode, supply 1. For distributed mode, supply 4 or more.
-      ## Note that the operator does not support upgrading from standalone to distributed mode.
-      - servers: 4
-        ## volumesPerServer specifies the number of volumes attached per MinIO Tenant Pod / Server.
-        volumesPerServer: 4
-        ## size specifies the capacity per volume
-        size: 10Gi
-        ## storageClass specifies the storage class name to be used for this pool
-        storageClassName: standard
-        ## Used to specify a toleration for a pod
-        tolerations: { }
-        ## nodeSelector parameters for MinIO Pods. It specifies a map of key-value pairs. For the pod to be
-        ## eligible to run on a node, the node must have each of the
-        ## indicated key-value pairs as labels.
-        ## Read more here: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/
-        nodeSelector: { }
-        ## Affinity settings for MinIO pods. Read more about affinity
-        ## here: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#affinity-and-anti-affinity.
-        affinity: { }
-        ## Configure resource requests and limits for MinIO containers
-        resources: { }
-        ## Configure security context
-        securityContext: { }
-        ## Configure topology constraints
-        topologySpreadConstraints: [ ]
-    ## Mount path where PV will be mounted inside container(s).
-    mountPath: /export
-    ## Sub path inside Mount path where MinIO stores data.
-    subPath: /data
-    # pool secrets
-    secrets:
-      # create a kubernetes secret object with the accessKey and secretKey as defined here.
-      enabled: true
-      name: minio1-secret
-      accessKey: minio
-      secretKey: minio123
-    # pool metrics to be read by Prometheus
-    metrics:
-      enabled: false
-      port: 9000
-    certificate:
-      ## Use this field to provide one or more external CA certificates. This is used by MinIO
-      ## to verify TLS connections with other applications:
-      ## https://github.com/minio/minio/tree/master/docs/tls/kubernetes#2-create-kubernetes-secret
-      externalCaCertSecret: { }
-      ## Use this field to provide a list of Secrets with external certificates. This can be used to to configure
-      ## TLS for MinIO Tenant pods. Create secrets as explained here:
-      ## https://github.com/minio/minio/tree/master/docs/tls/kubernetes#2-create-kubernetes-secret
-      externalCertSecret: { }
-      ## Enable automatic Kubernetes based certificate generation and signing as explained in
-      ## https://kubernetes.io/docs/tasks/tls/managing-tls-in-a-cluster
-      requestAutoCert: true
-      ## This field is used only when "requestAutoCert" is set to true. Use this field to set CommonName
-      ## for the auto-generated certificate. Internal DNS name for the pod will be used if CommonName is
-      ## not provided. DNS name format is *.minio.default.svc.cluster.local
-      certConfig: { }
-    ## Enable S3 specific features such as Bucket DNS which would allow `buckets` to be
-    ## accessible as DNS entries of form `<bucketname>.minio.default.svc.cluster.local`
-    s3:
-      ## This feature is turned off by default
-      bucketDNS: false
-    ## PodManagement policy for MinIO Tenant Pods. Can be "OrderedReady" or "Parallel"
-    ## Refer https://kubernetes.io/docs/tutorials/stateful-application/basic-stateful-set/#pod-management-policy
-    ## for details.
-    podManagementPolicy: Parallel
-    ## serviceMetadata allows passing additional labels and annotations to MinIO and Console specific
-    ## services created by the operator.
-    serviceMetadata: { }
-    ## Add environment variables to be set in MinIO container (https://github.com/minio/minio/tree/master/docs/config)
-    env: { }
-    ## PriorityClassName indicates the Pod priority and hence importance of a Pod relative to other Pods.
-    ## This is applied to MinIO pods only.
-    ## Refer Kubernetes documentation for details https://kubernetes.io/docs/concepts/configuration/pod-priority-preemption/#priorityclass/
-    priorityClassName: ""
