enable cdc link to database

--- a/packages/frontend/.docker.env
+++ b/packages/frontend/.docker.env
@@ -112,3 +112,4 @@ GENAI_LLM_PROMPT_ENG_URL={PROJECTMO_GENAI_LLM_PROMPT_ENG_URL}
 CLAMAV_IMAGE_URL={PROJECTMO_CLAMAV_IMAGE_URL}
 CODESPACE_SECURITY_APP_ID={PROJECTMO_CODESPACE_SECURITY_APP_ID}
 FORMBRICKS_SURVEY_URL={PROJECTMO_FORMBRICKS_SURVEY_URL}
+CDC_DATABASE_URL = {PROJECTMO_CDC_DATABASE_URL}
