--- a/packages/frontend/.env
+++ b/packages/frontend/.env
@@ -174,4 +174,5 @@ SPIRE_URL=YOUR_SPIRE_URL
 ODIN_URL=YOUR_ODIN_URL
 GENAI_DIRECT_CHAT_URL=YOUR_GENAI_DIRECT_CHAT_URL
 GENAI_LLM_PROMPT_ENG_URL=YOUR_GENAI_LLM_PROMPT_ENG_URL
+CDC_DATABASE_URL=YOUR_CDC_DATABASE_URL
 #Variables for Feature Controlling - END
