--- a/packages/authenticator-service/authenticator-lib/src/main/resources/api/kongGateway.yaml
+++ b/packages/authenticator-service/authenticator-lib/src/main/resources/api/kongGateway.yaml
@@ -463,6 +463,47 @@ paths:
           description: "Method not allowed"
         500:
           description: "Internal error" 
+
+ /kong/services/{serviceName}/functionplugin:
+    post:
+      tags:
+        - "kong" 
+      summary: "Attach functionPlugin to service."
+      description: "Attach functionPlugin to service."
+      operationId: "attachFunctionPlugin"
+      parameters:      
+        - name: "attachFunctionPluginRequestVO"
+          in: "body"
+          description: "Request Body that contains data required for attaching a plugin to service"
+          required: true
+          schema:
+            $ref: "#/definitions/AttachFunctionPluginRequestVO"  
+        - name: "serviceName"
+          in: "path"
+          description: "Name of the service for which plugin has to be attached"
+          required: true
+          type: "string"    
+      responses:
+        200:
+          description: "Returns message of success"
+          schema:
+            $ref: "#/definitions/GenericMessage"
+        409:
+          description: "Conflict"
+          schema:
+            $ref: "#/definitions/GenericMessage"            
+        400:
+          description: "Bad Request"
+          schema:
+            $ref: "#/definitions/GenericMessage"
+        401:
+          description: "Request does not have sufficient credentials."
+        403:
+          description: "Request is not authorized."
+        405:
+          description: "Method not allowed"
+        500:
+          description: "Internal error"  
           
 # path to get service 
 #  supported http methods GET    
@@ -885,4 +926,27 @@ definitions:
         type : boolean     
       env:
         type : string     
+
+ AttachFunctionPluginRequestVO:
+    type: object
+    properties:
+      data:
+        $ref: "#/definitions/AttachFunctionPluginVO"   
+
+ AttachFunctionPluginVO:
+    type: object
+    properties:
+      config:
+        $ref: "#/definitions/AttachFunctionPluginConfigVO"
+      name:
+        type: string
+
+ AttachFunctionPluginConfigVO:
+    type: object
+    properties:
+      access:
+        type: array
+        items: 
+          type: string
+
  
