--- a/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
+++ b/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
@@ -345,6 +345,37 @@ paths:
         500:
           description: "Internal error"
  
+  /workspaces/{id}/readme:
+    get:
+      tags:
+        - "code-server"
+      summary: "Get how to use codespace instructions from Readme file in git"
+      description: "Get how to use codespace instructions from Readme file in git "
+      operationId: "getReadme"
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "Workspace ID to be fetched"
+          required: true
+          type: "string"
+      responses:
+        201:
+          description: "Returns readme file from the repo of the codespace"
+          schema:
+            $ref: "#/definitions/CodeSpaceReadmeVo"
+        204:
+          description: "Fetch complete, no content found."
+        400:
+          description: "Bad request."
+        401:
+          description: "Request does not have sufficient credentials."
+        403:
+          description: "Request is not authorized."
+        405:
+          description: "Method not allowed"
+        500:
+          description: "Internal error"
+      
   /workspaces/{id}/collaborator:        
     post:
       tags:
@@ -1046,6 +1077,12 @@ paths:
 
           
 definitions:
+  CodeSpaceReadmeVo:
+    type: object
+    properties:
+      file:
+        type: string
+        format: binary
 
   RoleCollectionVO:
     type: object
