--- a/packages/powerplatform-backend/powerplatform-lib/src/main/resources/application.yml
+++ b/packages/powerplatform-backend/powerplatform-lib/src/main/resources/application.yml
@@ -5,6 +5,7 @@ spring:
     version: 1.0.0
   profiles:
     active: production
+
   flyway:
     enabled: ${FLYWAY_ENABLED:false}
     baseline-on-migrate: ${FLYWAY_BASELINE_ON_MIGRATE:false}
@@ -31,8 +32,39 @@ spring:
     password: ${API_DB_PASS:xxdbpassxx}
     driverClassName: org.postgresql.Driver
   
+    
+  kafka:
+    producer:
+    properties:
+      ssl:
+        truststore:
+          location: ${TRUSTSTORE_PATH:/XXXX/XXXX/truststore.jks}
+          password: ${TRUSTSTORE_PASSWORD:XXXX}
+          type: PKCS12
+        keystore:
+          location: ${KEYSTORE_PATH:/XXXX/XXXX/keystore.p12}
+          password: ${KEYSTORE_PASSWORD:XXXX}
+          type: PKCS12
+      security:
+          protocol: SSL    
+  cloud:
+    stream:
+      default-binder: kafka
+      kafka:
+        binder:
+          brokers: ${NAAS_BROKER:localhost:9092}  
+
+kafka:
+  centralTopic:
+    name: dnaCentralEventTopic
+       
 server:
   port: 9292
+
+powerapps:
+  defaults:
+    environment: ${POWERAPP_ENVIRONMENT_DEFAULT:XXXX}
+    productionAvailability: ${POWERAPP_PRODUCTION_AVAIL_DEFAULT:XXXX}
 
 #Cors Filter origin Domains  
 allowedCorsOriginPatternUrl: ${CORS_ORIGIN_URL:http://*}
@@ -43,7 +75,7 @@ management.endpoint.health.probes.enabled: true
 management.endpoint.health.show-details: always
 
 proxy: 
-  port: ${CUSTOMPROXY_PORT:xxxx}
+  port: ${CUSTOMPROXY_PORT:1234}
   host: ${CUSTOMPROXY_HOST:xxxx}
   
 logging:
