--- a/packages/powerplatform-backend/powerplatform-lib/src/main/resources/application-dev.yml
+++ b/packages/powerplatform-backend/powerplatform-lib/src/main/resources/application-dev.yml
@@ -63,7 +63,9 @@ powerapps:
   defaults:
     environment: ${POWERAPP_ENVIRONMENT_DEFAULT:XXXX}
     productionAvailability: ${POWERAPP_PRODUCTION_AVAIL_DEFAULT:XXXX}
-    
+    developerlicense: ${POWERAPP_DEVELOPERLICENSE_DEFAULT:XXXX}
+    powerBiApproverToken: ${POWERAPP_APPROVERTOKEN_DEFAULT:XXXX}
+        
 #Cors Filter origin Domains  
 allowedCorsOriginPatternUrl: ${CORS_ORIGIN_URL:http://*}
 swagger.headers.authorization.token: ${SWAGGER_HEADER_AUTH:XXXXXX}
