Enabled notifications added loggers

--- a/packages/powerplatform-backend/powerplatform-lib/src/main/resources/api/powerapp.yaml
+++ b/packages/powerplatform-backend/powerplatform-lib/src/main/resources/api/powerapp.yaml
@@ -255,7 +255,7 @@ definitions:
         type: string
       dyEnvOwnerName:
         type: string
-      dyEnvOwnerid:
+      dyEnvOwnerId:
         type: string
       department:
         type: string
