power platform tou changes

--- a/deployment/kubernetes/helm/charts/frontend/values.yaml
+++ b/deployment/kubernetes/helm/charts/frontend/values.yaml
@@ -199,6 +199,7 @@ configJs: |
         STORAGE_API_BASEURL: 'http://localhost:7175/api',
         REPORTS_API_BASEURL: 'http://localhost:7173/api',
         TOU_HTML: "<div>I agree to <a href=\"#\" target=\"_blank\" rel=\"noopener noreferrer\">terms of use</a></div>", 
+        TOU_GE_HTML: "<div>I agree to <a href=\"#\" target=\"_blank\" rel=\"noopener noreferrer\">terms of use</a></div>",
     }; 
 
     
