added not found

--- a/packages/authenticator-service/authenticator-lib/src/main/resources/api/kongGateway.yaml
+++ b/packages/authenticator-service/authenticator-lib/src/main/resources/api/kongGateway.yaml
@@ -968,6 +968,8 @@ definitions:
         type : boolean     
       env:
         type : string     
+      projectName :
+        type : string
 
  AttachFunctionPluginRequestVO:
     type: object
