add new power platform tile under trainings

--- a/packages/frontend/.env
+++ b/packages/frontend/.env
@@ -169,6 +169,7 @@ POWER_PLATFORM_CITIZEN_DEVELOPER_ACCOUNT_URL=YOUR_POWER_PLATFORM_CITIZEN_DEVELOP
 POWER_PLATFORM_FULL_DEVELOPER_ACCOUNT_URL=YOUR_POWER_PLATFORM_FULL_DEVELOPER_ACCOUNT_URL
 POWER_PLATFORM_SUPPORT_EMAIL=YOUR_POWER_PLATFORM_SUPPORT_EMAIL
 POWER_PLATFORM_SOCIAL_INTRANET_URL=YOUR_POWER_PLATFORM_SOCIAL_INTRANET_URL
+POWER_PLATFORM_TRAINING_URL=YOUR_POWER_PLATFORM_TRAINING_URL
 
 DATA_MODEL_URL=YOUR_DATA_MODEL_URL
 DATA_CATALOG_URL=YOUR_DATA_CATALOG_URL
