added misse file

--- a/packages/authenticator-service/authenticator-lib/src/main/resources/api/kongGateway.yaml
+++ b/packages/authenticator-service/authenticator-lib/src/main/resources/api/kongGateway.yaml
@@ -1123,5 +1123,7 @@ definitions:
     properties:
       api_version_shortname:
         type: string
+      environment:
+        type: string
         
     
