--- a/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
+++ b/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
@@ -1360,7 +1360,7 @@ definitions:
         description: "Git URL"      
       cloudServiceProvider:
         type: string
-        enum: [DHC-CaaS]
+        enum: [DHC-CaaS,DHC-CaaS-AWS]
         description: "Cloud services provider. Ex: DHC-CaaS"
       ramSize:
         type: string
