--- a/packages/code-space-mfe/.env
+++ b/packages/code-space-mfe/.env
@@ -6,6 +6,7 @@ CODE_SPACE_GIT_ORG_NAME=
 CODESPACE_OPENSEARCH_LOGS_URL=
 CODESPACE_OPENSEARCH_BUILD_LOGS_URL=
 CODESPACE_OIDC_POPUP_URL=
+CODESPACE_AWS_POPUP_URL=
 CODESPACE_OIDC_POPUP_WAIT_TIME=
 CODESPACE_HARDWARE_REQUEST_TEMPLATE=
 CODESPACE_SOFTWARE_REQUEST_TEMPLATE=
